--- a/囗/Readme
+++ b/囗/Readme
@@ -1,8 +1,4 @@
-0x
-
-6 0 6 2    恢 restore; big, great, immense, vast
-5 F A 9    復 return; repeat; repeatedly
-6 A 1 9    標 a mark, symbol, label, sign; standard
-9 8 4 C    題 forehead; title, headline; theme
-
-0x60625FA96A19984C
+6 5 E 5    日 sun; day; daytime
+6 7 2 C    本 root, origin, source; basis
+5 0 2 D    倭 dwarf; dwarfish, short
+5 6 F D    国 nation, country, nation-state
